@@ -1,12 +1,12 @@
 <html>
 <head>
-<title>The Official FVWM Homepage</title>
+<title>The Official FVWM Home Page</title>
 </head>
   <body BACKGROUND="black-stone1.jpg"
     bgcolor="#303030" text="#ffffff"
     link="#ffff88" vlink="#eedddd" alink="#ff0000">
 <center>
-<h1><font color="pink">Welcome to the Official FVWM Homepage</font></h1>
+<h1><font color="pink">Welcome to the Official FVWM Home Page</font></h1>
 <p>
 <img src="fvwm_smaller.gif" alt="[FVWM]" width=153 height=64>
 </center>
@@ -14,6 +14,8 @@
 <p>
 FVWM is an extremely powerful ICCCM-compliant multiple virtual desktop window
 manager for the X&nbsp;Window system.
+Development is active, and support is excellent.
+Check it out!
 
 <!--
 <p><font size="+1" color="yellow">NEWS FLASH!</font>
@@ -38,7 +40,7 @@ release, is now available for <a href="download.html">download</a>.
   <li><a href="features.html">Features</a>
   <li><a href="generated/NEWS.html">Latest News</a>
   <li><a href="generated/FAQ.html">FAQ</a>
-  <li><a href="screenshots/">Screenshots</a>
+  <li><a href="screenshots/">Screen shots</a>
   <li><a href="sample-menus/index.html">Sample Menus</a>
   <li><a href="vector-buttons/vector-buttons.html">Vector Buttons</a>
   <li><a href="generated/manpages/">Manual Pages</a>
@@ -58,7 +60,7 @@ release, is now available for <a href="download.html">download</a>.
 <hr>
 <center>
 Created: Jan 31, 1996;
-Last modified: Jun 24, 2002.
+Last modified: Jul 20, 2002.
 </center>
 
 <!--
@@ -69,3 +71,5 @@ Last modified: Jun 24, 2002.
 -->
 </body>
 </html>
+<!--  LocalWords:  FVWM
+ -->
