@@ -1,3 +1,7 @@
+2002-07-20  Dan Espen  <dane@mk.telcordia.com>
+
+	* index.html: More typos, add a little FVWM promo.
+
 2002-07-20  Mikhael Goikhman  <migo@homemail.com>
 
 	* index.html:
